modefided all filles

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
                     <div class="logo"><i class="fa-solid fa-cloud"></i></div>
                     <div class="clouds-degree"><i class="fa-solid fa-cloud"></i> <span></span></div>
                 </div>
+                <div class="box countries">
+                    <div class="logo"><h2>Country</h2></div>
+                    <div class="country"> <span></span></div>
+                </div>
             </section>
         </section>
     </section>
