add form in html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <section class="page">
         <section class="content">
             <div class="search">
-                <input type="search">
+                <form action="">
+                    <input type="search">
+                </form>
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
             <section class="info">
